minor styling changes in html and minor formatting and commenting in app.js

--- a/StarterCode/index.html
+++ b/StarterCode/index.html
@@ -27,10 +27,10 @@
           <select id="selDataset" onchange="optionChanged(this.value)"></select>
         </div>
         <div class="card card-primary">
-          <div class="card-header">
-            <h4 class="card-title">Demographic Info</h4>
+          <div class="card-header" style="background-color: #2f7bb8">
+            <h4 class="card-title" style="color: white">Demographic Info</h4>
           </div>
-          <div id="sample-metadata" class="card-body"></div>
+          <div id="sample-metadata" class="card-body" style="border: 1px solid #2f7bb8;"></div>
         </div>
       </div>
       <div class="col-md-5">
@@ -48,7 +48,6 @@
   </div>
 
   <script src="./static/js/app.js"></script>
-  <!-- <script src="./static/js/bonus.js"></script> -->
 
 </body>
 
