--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </div>
   </div>
 
-  <script src="./static/js/app.js"></script>
+  <script src="StarterCode/static/js/app.js"></script>
 
 </body>
 
